<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Predict PNR Status</string>
    <string name="buy">Upgrade to Premium</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="debug_view">Debug View</string>
    <string name="trainNo">Train No:</string>
    <string name="fromStation">From Station:</string>
    <string name="toStation">To Station:</string>
    <string name="station_code">Station Code</string>
    <string name="travelDate">Travel Date:</string>
    <string name="travelClass">Class:</string>
	<string name="currentStatus">Curr. Status:</string>
	<string name="predict_status">Predict Status</string>
	<string name="cst_hint">GNWL60/WL50</string>
	<string name="PNR">PNR:</string>
	<string name="enter_pnr">Enter PNR</string>
    <string name="loading">Loading....</string>
    <string name="ayansh">By Varun Verma</string>
    <string name="cancel">Cancel</string>
    <string name="accept">I Agree</string>
    <string name="update_pnr_status">Update</string>
    <string name="go">Go</string>
    
    <string-array name="travel_class">
        <item>1A</item>
        <item>2A</item>
        <item>3A</item>
        <item>SL</item>
    </string-array>

</resources>