<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:text="@string/PNR"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pnr_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:ems="10"
            android:maxLength="10"
            android:hint="@string/enter_pnr"
            android:inputType="number" >
        </EditText>

        <Button
            android:id="@+id/get_pnr_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="Go"
            android:contentDescription="@string/enter_pnr" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:text="@string/trainNo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/train_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="65"
            android:ems="10"
            android:maxLength="6"
            android:hint="@string/trainNo"
            android:inputType="number" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tdt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:text="@string/travelDate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/travel_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="65" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tcl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:text="@string/travelClass"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/travel_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="65"
            android:entries="@array/travel_class" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:text="@string/currentStatus"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/current_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="65"
            android:ems="10"
            android:hint="@string/cst_hint" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/predict_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/predict_status" />

</LinearLayout>